fix: adjust cards positioning on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,6 +26,6 @@ footer {
 
 @media screen and (max-width: 768px) {
   #root {
-    padding: 0em 2em;
+    padding: 0em 1em;
   }
 }
